--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8080
+spring.datasource.url= jdbc:mysql://localhost:3306/covid_app_test?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=12345
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
